# chinese-diesel-heater-esp32

./: CMakeLists.txt  Makefile  README.md  how_to_build.txt  pins.txt  sdkconfig
front/: package.json
front/src/: App.vue
main/: CMakeLists.txt  app_main.c  app_webserver.c  app_webserver.h  app_wifi.c  app_wifi.h  rest_server.c  utilities.h
main/display/: display.c  display.h  ssd1306.c  ssd1306.h  ssd1306_fonts.c  ssd1306_fonts.h
main/heater/: adc.c  adc.h  app_config.h  app_heater.c  app_heater.h  event_dispatcher.c  event_list.h  fan.c  fan.h  glow_plug.c  glow_plug.h  gpio.c  gpio.h  heater.c  heater.h  mainloop_timer.c  misc.c  misc.h  ntc50.c  ntc50.h  oil_pump.c  oil_pump.h  pwm.c  pwm.h  settings.c  settings.h  shell.c  soft_pwm.c  soft_pwm.h
main/utils/: circ_buffer.h  cli.c  cli.h  cli_telnet.c  io_driver.c  io_driver.h  io_driver_notifier.c  io_driver_notifier.h  soft_timer.h  stream.c  stream.h  tcp_server.c  tcp_server.h  tcp_server_ipv4.c  tcp_server_ipv4.h  telnet_reader.c  telnet_reader.h
pcb/: diesel-heater-esp32  diesel-heater-esp32-cache.lib  diesel-heater-esp32.kicad_pcb  diesel-heater-esp32.kicad_pcb-bak  diesel-heater-esp32.net  diesel-heater-esp32.pro  diesel-heater-esp32.sch  diesel-heater-esp32.sch-bak  diesel-heater-esp32.xml  fp-info-cache
pcb/manufacturing/: diesel-heater-esp32-B_Cu.gbr  diesel-heater-esp32-B_Mask.gbr  diesel-heater-esp32-B_Paste.gbr  diesel-heater-esp32-B_SilkS.gbr  diesel-heater-esp32-Edge_Cuts.gbr  diesel-heater-esp32-F_Cu.gbr  diesel-heater-esp32-F_Mask.gbr  diesel-heater-esp32-F_Paste.gbr  diesel-heater-esp32-F_SilkS.gbr  diesel-heater-esp32.drl
web-front/: clean.sh  package-lock.json  package.json  vue.config.js
web-front/src/: App.vue  background.js  main.js
web-front/src/components/: CommPortDialog.vue  EditSettingDialog.vue  EditStepDialog.vue  FanDialog.vue  FanIcon.vue  FireIcon.vue  GlowPlugDialog.vue  GlowPlugIcon.vue  Heater.layout-try1.vue  (+9 more)
(+6 files in other folders)
